# rwkv-rust

./: Cargo.toml  build.rs
libs/: librwkv.dylib
rwkv-cpp/: rwkv.h
src/: lib.rs  rwkv_rust_model.rs  sampling.rs
