[package]
name = "rwkv-rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.64.0"

[dependencies]
libloading = "0.7"
#libc = "0.2"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
clap = { version = "4.1.8", features = ["derive"] }
#llama-rs = { git = "https://github.com/rustformers/llama-rs.git", branch = "main", features = ["convert"] }
env_logger = "0.10.0"
log = "0.4"
once_cell = "1.17.1"
num_cpus = "1.15.0"
rand = "0.8.5"
napi = { version = "2.12.2", default-features = false, features = ["napi6", "async"] }
napi-derive = "2.12.2"
tokio = { version = "1.26.0", features = ["full"] }
futures = "0.3"